# clewdr

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_zh.md  RELEASE_NOTES.md  build.rs
.github/workflows/: build.yml  docker-build.yml
clewdr-frontend/src/components/: app.rs
docs/: cache_control_usage.md  cache_control_usage_en.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: index.ts  vertexApi.ts
frontend/src/components/claude/: CookieVisualization.tsx  index.tsx
frontend/src/components/cli/: CliSubmitForm.tsx  CliVisualization.tsx  index.tsx
frontend/src/components/config/: ConfigForm.tsx  StorageSummary.tsx  index.tsx
frontend/src/components/cookie/: DeleteButton.tsx
frontend/src/components/gemini/: index.tsx
frontend/src/components/gemini/aistudio/: KeySubmitForm.tsx  KeyVisualization.tsx  index.tsx
frontend/src/components/gemini/vertex/: VertexCredentialValue.tsx  VertexDeleteButton.tsx  VertexStatus.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/locales/en/: translation.json
frontend/src/locales/zh/: translation.json
frontend/src/types/: config.types.ts  cookie.types.ts  vertex.types.ts
frontend/src/utils/: ansi.ts
src/: error.rs  lib.rs  main.rs  router.rs
src/api/: config.rs  error.rs  gemini.rs  gemini_cli.rs  messages.rs  misc.rs  mod.rs  storage.rs
src/body/: response.rs
src/claude_code_state/: chat.rs  exchange.rs  mod.rs  organization.rs
src/claude_web_state/: bootstrap.rs  chat.rs  transform.rs
src/config/: clewdr_config.rs  cli_token.rs  constants.rs  cookie.rs  mod.rs
src/context/: mod.rs
src/gemini_state/: mod.rs
src/lib/: config.rs  update.rs
src/middleware/: auth.rs  mod.rs  stop_sequence.rs
src/middleware/claude/: request.rs
src/middleware/gemini/: request.rs
src/persistence/: mod.rs
src/persistence/db/: conn.rs  entities.rs  metrics.rs  mod.rs  repo.rs
src/routes/: admin.rs  claude_code.rs  claude_web.rs  gemini.rs  gemini_cli.rs  mod.rs
src/services/: cd_scheduler.rs  cli_token_actor.rs  cookie_actor.rs  key_actor.rs  mod.rs  sync.rs  vertex_actor.rs
src/types/: claude.rs  oai.rs
src/types/claude_web/: response.rs
src/utils/: mod.rs  stop_sequence.rs
tests/: image_conversion_test.rs
wiki/: README.md  docker.md
