[package]
name = "clewdr"
version = "0.12.24"
edition = "2024"
authors = ["Xerxes-2 <dspxue@gmail.com>", "LeenHawk <leenhawk@leenhawk.com>"]
license = "AGPL-3.0"

[lib]
path = "src/lib.rs"

[dependencies]
arc-swap = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-auth = "0.8"
base64 = "0.22"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "3"
console-subscriber = { version = "0.5", optional = true }
const_format = { version = "0.2", features = ["fmt"] }
etcetera = { version = "0", optional = true }
eventsource-stream = "0.2"
figment = { version = "0.10", features = ["env", "toml"] }
futures = "0.3"
hex = "0.4"
http = "1"
include_dir = { version = "0.7", optional = true }
itertools = "0.14"
mimalloc = { version = "0.1" }
moka = { version = "0.12", features = ["sync"] }
oauth2 = { version = "5", default-features = false }
passwords = "3"
ractor = "0.15"
regex = "1"
self-replace = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["chrono_0_4"] }
sha2 = "0.11"
snafu = { version = "0.9", features = ["futures", "rust_1_81"] }
struct_iterable = "0.1"
strum = { version = "0.28", features = ["derive"] }
tempfile = { version = "3", optional = true }
thiserror = "2"
tiktoken-rs = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = [
  "compression-zstd",
  "cors",
  "trace",
] }
tower-serve-static = { version = "0.1", optional = true }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "chrono",
  "env-filter",
] }
trie-rs = "0.4"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
wreq = { version = "6.0.0-rc.28", features = [
  "cookies",
  "json",
  "multipart",
  "socks",
  "stream",
] }
wreq-util = "3.0.0-rc.10"
zip = { version = "8", default-features = false, features = [
  "deflate",
], optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
aws-lc-rs = "1"
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
] }

[target.'cfg(target_os = "android")'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.3"

[features]
default = ["external-resource", "portable"]
embed-resource = ["dep:include_dir", "dep:tower-serve-static"]
external-resource = ["tower-http/fs"]
portable = ["dep:self-replace", "dep:tempfile", "dep:zip"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
xdg = ["dep:etcetera"]

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
